[package]
name = "axdtb"
version = "0.1.0"
edition = "2021"
authors = ["yzc <89302020@qq.com>"]
description = "ArceOS dtb module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axdtb"

[dependencies]
fdt = "0.1.5"
axlog = { path = "../axlog" }
allocator = { path = "../../crates/allocator" }